fix: style tweaks to stats in dark mode

--- a/src/global.styl
+++ b/src/global.styl
@@ -76,3 +76,6 @@ h2
     position absolute
     text-align center
     width 100%
+
+.dark .stats
+    background rgba(black, 0.3)
